tdf#90614 oups... I was to eager in replacing getAny() by makeAny

also handle the SQLNULL case

Change-Id: Ie7fffd6b46ed8b3dfa7231928f55743f71d2ea98