connectivity/source/commontools/FValue.cxx
@@ -885,6 +885,9 @@ Any ORowSetValue::makeAny() const
     {
         switch(getTypeKind())
         {
+            case DataType::SQLNULL:
+                assert(rValue == Any());
+                break;
             case DataType::CHAR:
             case DataType::VARCHAR:
             case DataType::DECIMAL:
@@ -964,7 +967,7 @@ Any ORowSetValue::makeAny() const
                 break;
             default:
                 SAL_WARN( "connectivity.commontools","ORowSetValue::makeAny(): UNSUPPORTED TYPE!");
-                rValue = makeAny();
+                rValue = getAny();
                 break;
         }
     }
